# sql-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_PLAN.md  CONTRIBUTING.md  ENTERPRISE_ARCHITECTURE_STATUS.md  ENTERPRISE_REVIEW.md  FREE_LLM_SUCCESS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_NEW.md  SECURITY.md  SETUP.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  USAGE_GUIDE.md  analyze_only.py  check_environment.py  direct_test.py  generate_config.py  interactive_analysis.py  pyproject.toml  quick_debug.py  quick_enterprise_test.py  quick_sql.py  regenerate_embeddings.py  regenerate_embeddings_only.py  requirements.txt  run_commands.bat  run_interactive_sql.py  run_sql_generator.py  setup_embeddings.py  setup_environment.py  setup_llm.py  simple_table_selector.py  simple_test.py  tables.txt  validate_scoring.py
.github/workflows/: ci.yml
data/config/: config.json  llm_config.json  query_analysis_config.json  query_analysis_config_template.json
data/schemas/: sakila_schema.json  tables_schema.json
docs/: API.md  ENTERPRISE_ARCHITECTURE.md
scripts/: README.md  alias_demo.py  check_collections.py  detailed_analysis.py  direct_test.py  employee_search.py  examine_embeddings.py  extract_prompt.py  final_alias_test.py  outer_join_examples.py  quick_alias_test.py  quick_search.py  quick_test.py  run_complete_test.py  scoring_comparison.py  scoring_summary.py  show_prompt.py  simple_score_test.py  table_aliases_demo.py  validate_fix.py
sql_generator/: __init__.py  cli.py  main.py
sql_generator/core/: __init__.py  exceptions.py  generator.py  query_analyzer.py  schema_manager.py
sql_generator/llm/: __init__.py  llm_service.py  sql_prompt_generator.py
sql_generator/schema/: __init__.py  schema_embedder.py  schema_loader.py  schema_searcher.py  schema_searcher_fixed.py  semantic_schema.py  vector_store.py
sql_generator/utils/: __init__.py  config_manager.py
tests/: conftest.py
